--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^5.10.0",
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "prettier-eslint-cli": "^4.7.1",
     "react-dom": "^16.4.2",
@@ -31,6 +32,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
     "react": "^16.4.2"
   }
 }
